# gw2_taco_parser

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  parser.rs  xml_parser.rs
