[package]
name = "learn_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
#quick-xml = { version = "0.21", features = [ "serialize" ] }
#minidom = "0.13.0"
serde-xml-rs = "0.5.1"
serde_json = "1.0"